gitops/staging/werify/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: werify
  namespace: werify-staging
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-body-size: "60m"
    nginx.ingress.kubernetes.io/websocket-services: "werify"
spec:
  ingressClassName: nginx
  rules:
  - host: staging.werify.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: werify
            port:
              number: 4000
